--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@lunaticmuch/docusaurus-terminology": "^1.2.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
-    "csv": "^6.3.6",
+    "neat-csv": "^7.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
