--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@lunaticmuch/docusaurus-terminology": "^1.2.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^2.4.2",
     "neat-csv": "^7.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
