--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "hyo:check": "zx ./scripts/check.zx.mjs",
-    "hyo:build": "zx ./scripts/build.zx.mjs"
+    "hyo:build": "zx ./scripts/build.zx.mjs",
+    "hyo:grammar": "antlr4ng -Dlanguage=JavaScript src/components/TextEditor/language/grammar/HisyeoLexer.g4 -visitor src/components/TextEditor/language/grammar/HisyeoParser.g4 -o src/components/TextEditor/language/build -Xexact-output-dir"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.3",
+    "@docusaurus/plugin-content-pages": "^2.4.3",
     "@docusaurus/preset-classic": "2.4.3",
     "@lunaticmuch/docusaurus-terminology": "^1.2.1",
     "@mdx-js/react": "^1.6.22",
+    "@uiw/react-codemirror": "^4.22.1",
+    "antlr4ng": "^3.0.4",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.4.2",
     "neat-csv": "^7.0.0",
@@ -29,6 +33,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
+    "antlr4ng-cli": "^2.0.0",
     "zx": "^8.0.2"
   },
   "browserslist": {
