add dry run to scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "hyo:check": "zx ./scripts/check.zx.mjs",
-    "hyo:build": "zx ./scripts/build.zx.mjs"
+    "hyo:build": "zx ./scripts/build.zx.mjs",
+    "hyo:term-check": "docusaurus parse --dry-run"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.3",
