--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "neat-csv": "^7.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-children-utilities": "^2.10.0",
+    "react-dom": "^17.0.2",
+    "react-string-replace": "^1.1.1",
+    "react-tooltip": "^5.27.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
