--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 govuliel:
   name: Govuliel 
-  title: Maintainer of Hisyëö
+  title: Maintainer of Hîsyêô
   url: https://github.com/Govuliel/
   image_url: https://github.com/Govuliel.png
