--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
-govuliel:
-  name: Govuliel 
+gofuliel:
+  name: Gofuliel 
   title: Maintainer of Hîsyêô
-  url: https://github.com/Govuliel/
-  image_url: https://github.com/Govuliel.png
+  url: https://github.com/Gofuliel/
+  image_url: https://github.com/Gofuliel.png
