--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
+    "docusaurus-plugin-llms": "^0.2.2",
     "zx": "^8.0.2"
   },
   "browserslist": {
