fix definition from "last/latest" to "last/final"

--- a/docs/tags.yml
+++ b/docs/tags.yml
@@ -1935,7 +1935,7 @@ fikwun:
     description: "bacteria/microbe"
 fêlcîn:
     label: fêlcîn
-    description: "last/latest"
+    description: "last/final"
 fîectu:
     label: fîectu
     description: "simple/basic"
